--- a/_posts/2023-02-14-dna-extracts-02-14-23.md
+++ b/_posts/2023-02-14-dna-extracts-02-14-23.md
@@ -87,7 +87,7 @@ Sample info:
 - Vortexed tubes ~10 sec
 - Placed tubes on ice for 5 min
 - Centrifuged tubes 16,300g for 3 minutes (had to be done in 2 batches)
-- Made new tubes with 300ul of fresh 100% ethanol with final tube labels
+- Made new tubes with 300ul of fresh 100% isopropanol with final tube labels
 - Transferred the supernatant from the centrifugation (~400ul) to the new tubes with the isopropanol
 - Inverted the tubes 50X
 - Centrifuged the tubes 16,300g for 5 minutes (2 batches)
