--- a/_posts/2024-03-08-low-dil-DNA-2.md
+++ b/_posts/2024-03-08-low-dil-DNA-2.md
@@ -109,3 +109,6 @@ Set 2 (also some CO1 from the replicate 1 of this experiment)
 ![](https://raw.githubusercontent.com/meschedl/Unckless-Lab-Notebook-Maggie/master/images/20240312-gel-3.jpeg)
 ![](https://raw.githubusercontent.com/meschedl/Unckless-Lab-Notebook-Maggie/master/images/20240312-gel-4.jpeg)
 ![](https://raw.githubusercontent.com/meschedl/Unckless-Lab-Notebook-Maggie/master/images/20240312-gel-5.jpeg)
+
+
+Information and scoring on these samples can be found [here](https://docs.google.com/spreadsheets/d/14z52bWO3OVq97uOBtqyV3BqQNTjoNB85Sta_ir17JCQ/edit?gid=2058654582#gid=2058654582)
